--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,20 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+.btn {
+  border: 3px solid #fec63e;
+  padding: 10px 30px;
+  color: #fec63e;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: .1em;
+}
+.btn:hover {
+  color: #fff;
+  border-color: #fff;
+}
 
 p {
   font-family: Georgia, 'Times New Roman', serif;
@@ -64,6 +78,7 @@ color: #fff;
   max-width: 320px;
   margin: 0 auto;
   color: #fff;
+  margin-bottom: 40px;
 
 }
 
