--- a/css/style.css
+++ b/css/style.css
@@ -17,11 +17,37 @@ body {
   border-color: #fff;
 }
 
+.btn.btn-preto:hover {
+  color:#000;
+  border-color: #000;
+}
+
+
+.subtitulo{
+  font-size: 24px;
+  line-height: 30px;
+  font-weight: bold;
+  letter-spacing: .1em;
+  color:#000;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 40px;
+}
+.subtitulo:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #000;
+    margin: 8px auto;
+}
+
 p {
   font-family: Georgia, 'Times New Roman', serif;
   font-size: 14px;
   line-height: 20px;
 }
+
 /*Header*/
 
 .header {
@@ -30,6 +56,7 @@ p {
   width: 100%;
   background: #fec63e;
   padding: 15px 0;
+  z-index: 10;
 }
 
 .header_menu {
@@ -99,4 +126,49 @@ color: #fff;
   font-size: 14px;
   letter-spacing: .1em;
 }
+/* Produtos */
+.produtos {
+  padding: 60px 0;
+}
 
+.produtos_lista li{
+  background: #fec63e;
+  text-align: center;
+}
+
+.produtos_lista li h3{
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 25px;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  margin-top: 10px ;
+
+}
+.produtos_lista li h3:after{
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #000;
+  margin: 3px auto;
+}
+
+.produtos_lista li p{
+  padding: 10px 20px 20px 20px;
+}
+
+.produtos_lista-icone{
+  background-color: #000;
+  padding: 20px;
+}
+
+.call{
+  padding-top: 40px;
+  text-align: center;
+  clear: both;
+}
+
+.call p{
+  margin-bottom: 20px;
+}
