--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ body {
 }
 
 
-.subtitulo{
+.subtitulo {
   font-size: 24px;
   line-height: 30px;
   font-weight: bold;
@@ -171,4 +171,27 @@ color: #fff;
 
 .call p{
   margin-bottom: 20px;
+}
+
+/* Portfólio*/
+
+.portfolio {
+  width:100%;
+  background: #000;
+  padding: 40px 0;
+}
+
+.portfolio .subtitulo{
+  color: #fec63e;
+}
+.portfolio .subtitulo::after{
+  color: #fec63e;
+}
+
+.portfolio_lista li:last-child{
+  margin-top: 20px;
+}
+
+.portfolio .call p {
+  color:#fff
 }
