--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,9 @@ p {
   font-size: 14px;
   line-height: 20px;
 }
+img {
+  display: block;
+}
 
 /*Header*/
 
@@ -55,7 +58,7 @@ p {
   top: 0;
   width: 100%;
   background: #fec63e;
-  padding: 15px 0;
+  padding: 16px 0;
   z-index: 10;
 }
 
@@ -89,7 +92,7 @@ color: #fff;
   height: 380px;
   background: url("../img/bg.jpg") no-repeat;
   background-size: cover;
-  margin-top: 96px;
+  margin-top: 92px;
   text-align: center;
   padding-top: 80px;
 }
@@ -194,4 +197,49 @@ color: #fff;
 
 .portfolio .call p {
   color:#fff
+}
+
+.qualidade {
+  padding: 60px 0px;
+}
+
+.qualidade::after {
+  content: "";
+  width: 634px;
+  height: 83px;
+  display: block;
+  background: url("../img/linhas.svg") no-repeat center;
+  position: absolute;
+  top: 209px;
+  right: 162px;
+  z-index: -1;
+}
+
+.qualidade img {
+  margin: 0 auto;
+}
+
+.qualidade_lista {
+  padding-top: 20px;
+}
+.qualidade_lista li{
+  text-align: center;
+  padding: 0 40px;
+}
+.qualidade_lista li h3{
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 25px;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  margin-top: 20px ;
+
+}
+.qualidade_lista li h3:after{
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #000;
+  margin: 6px auto;
 }
