--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ img {
   top: 0;
   width: 100%;
   background: #fec63e;
-  padding: 16px 0;
+  padding: 15px 0;
   z-index: 10;
 }
 
@@ -68,7 +68,7 @@ img {
 
 .header_menu ul li {
  display: inline-block;
- margin-left: 20px;
+ margin-left: 25px;
  margin-top: 20px;
 }
 
@@ -121,7 +121,7 @@ color: #fff;
   width: 60px;
   height: 3px;
   background: #fff;
-  margin: 13px auto 10px auto;
+  margin: 14px auto 10px auto;
 }
 .quote-externo cite {
   font-style: normal;
@@ -139,13 +139,17 @@ color: #fff;
   text-align: center;
 }
 
+.produtos_lista li img {
+	margin: 0 auto;
+}
+
 .produtos_lista li h3{
   font-weight: bold;
   font-size: 18px;
   line-height: 25px;
   text-transform: uppercase;
   letter-spacing: .1em;
-  margin-top: 10px ;
+  margin-top: 20px ;
 
 }
 .produtos_lista li h3:after{
@@ -193,12 +197,14 @@ color: #fff;
 
 .portfolio_lista li:last-child{
   margin-top: 20px;
+  
 }
 
 .portfolio .call p {
   color:#fff
 }
 
+/*Qualidade*/
 .qualidade {
   padding: 60px 0px;
 }
@@ -242,4 +248,75 @@ color: #fff;
   height: 3px;
   background: #000;
   margin: 6px auto;
+}
+/* Quebra */
+.quebra {
+  width: 100%;
+  height: 220px;
+  background: url("../img/bg-footer.jpg");
+  background-size: cover;
+  text-align: center;
+  padding-top: 40px;
+}
+
+.quebra .quote-externo {
+  max-width: 400px;
+}
+
+/* Footer */
+
+.footer {
+  width: 100%;
+  background: #000;
+  color: #fff;
+  padding: 20px 0;
+}
+
+.footer h3 {
+  font-size: 18px;
+  line-height: 25px;
+  color: #fec63e;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  font-weight: bold;
+}
+
+.footer h3:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #fec63e;
+  margin: 6px 0 12px 0;
+}
+
+.footer_historia {
+  padding-right: 40px;
+}
+
+.footer_contato ul li{
+  font-size: 14px;
+  line-height: 20px;
+  font-family: Georgia, 'Times New Roman', serif;
+}
+
+.footer_redes ul li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.footer_redes ul li a{
+  border: 3px solid #fec63e;;
+  display: block;
+  padding: 10px;
+}
+
+.footer_redes ul li a:hover{
+  border: 3px solid #fff;
+}
+
+.copy {
+  width: 100%;
+  background: #fec63e;
+  padding: 20px 0;
 }
