--- a/css/produtos.css
+++ b/css/produtos.css
@@ -148,10 +148,9 @@
 	font-family: Georgia, "Times New Roman", serif;
 }
 
-.dados_email {
-	margin-bottom: 40px;
+.orcamento_dados span:nth-of-type(2){
+  margin-bottom: 30px;
 }
-
 .orcamento_dados ul {
 	padding-right: 60px
 }
