--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1,46 +1,75 @@
 /*Estilo Tablet*/
 @media only screen and (min-width: 788px) and (max-width: 979px) {
-	
+
+  /*Qualidade Home*/
+  .qualidade:after {
+    right: 66px;
+  }
+  .qualidade_lista li{
+    padding: 0 10px;
+  }
+
+  /*Footer*/
+  .footer_redes ul li a {
+  padding: 6px;
+  }
+  .footer_redes ul li a img{
+    width: 26px;
+    height: 26px;
+  }
 }
 
 /*Estilo Smartphone*/
 @media only screen and (max-width: 787px) {
 
-/* Header */
-.header {
+  /* Header */
+  .header {
   position: relative;
   padding-bottom: 0px;
-}
-.header img{
+  }
+  .header img{
   margin: 0 auto;
   margin-bottom: 20px;
-}
+  }
 
-.header_menu{
+  .header_menu{
   text-align: center;
-}
-.header_menu ul li {
+  }
+  
+  .header_menu ul li {
   margin: 5px;
+  }
 
-}
-
-.header_menu ul li a {
+  .header_menu ul li a {
   border: 4px solid #000;
   width: 136px;
   display: block;
   float: left;
-}
+  } 
 
-.header_menu ul li a:hover {
+  .header_menu ul li a:hover {
   border-color: #fff;
-}
+  }
 
-/* Introdução */
-.introducao {
+  /* Introdução */
+  .introducao {
   margin-top: 0px;
-  padding-top: 20px;
+  padding-top: 40px;
   background: url("../img/bg-mobile.jpg") no-repeat center;
   background-size: cover;
+  }
+  .introducao h1 {
+    font-size: 36px;
+ 
+  }
 
-}
+  /*Call*/
+  .call{
+  padding-top: 10px;
+  }
+
+  /*Qualidade Home*/
+   .qualidade:after {
+    display: none;
+  }
 }
